add rest endpoints  to handle app modules

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,7 +18,7 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
                 format_sql: true
-                default_schema: example
+                default_schema: rlmgmt
 
 com:
     vcgdev:
