--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: ${ACTIVE_PROFILE}
   jackson:
-    default-property-inclusion: non-null
+    default-property-inclusion: non-empty
   jpa:
     properties:
       hibernate.jdbc.time_zone: UTC
