--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ apply plugin: 'net.ltgt.apt-idea'
 apply plugin: 'net.ltgt.apt-eclipse'
 
 group = 'com.lk.cloud.role'
-version = '0.0.1'
+version = '0.0.2-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
